--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
         margin: 0;
       }
     </style>
+    <link rel="icon" type="image/x-icon" href="./s-logo.png">
     <title>Shivanshu</title>
   </head>
   <body>
